<resources>
    <string name="app_name">android-calculator</string>

    <dimen name="button_width">75dp</dimen>
    <dimen name="textSize">25sp</dimen>
    <dimen name="buttonMargin">0.5dp</dimen>
    <dimen name="layout_height">70dp</dimen>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">x</string>
    <string name="divide">/</string>
    <string name="clear">c</string>
    <string name="result">=</string>
    <string name="plus_minus">+/-</string>
    <string name="delete">DEL</string>
    <string name="percentage">%</string>


</resources>
