<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|right"
        android:textSize="20dp"
        android:layout_above="@+id/answer" />
    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25dp"
        android:gravity="bottom|right"
        android:layout_above="@+id/keypad"
        />
    <LinearLayout
        android:id="@+id/keypad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_one"
                android:text="@string/one"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_two"
                android:text="@string/two"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_three"
                android:text="@string/three"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_clear"
                android:text="@string/clear"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_four"
                android:text="@string/four"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_five"
                android:text="@string/five"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_six"
                android:text="@string/six"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_plus"
                android:text="@string/plus"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_seven"
                android:text="@string/seven"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_eight"
                android:text="@string/eight"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_nine"
                android:text="@string/nine"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_minus"
                android:text="@string/minus"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_zero"
                android:text="@string/zero"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
<!--            <Button-->
<!--                android:id="@+id/btn_percentage"-->
<!--                android:text="@string/percentage"-->
<!--                android:textSize="@dimen/textSize"-->
<!--                android:textColor="@color/white"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_height="match_parent" />-->
            <Button
                android:id="@+id/btn_divide"
                android:text="@string/divide"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_times"
                android:text="@string/multiple"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_result"
                android:text="@string/result"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>